Added GA tracking

--- a/index.html
+++ b/index.html
@@ -144,9 +144,15 @@
         </div>
 
         <div style="width:800px; margin:0 auto; background: rgba(255,255,255,.55); padding:20px;margin-top:5rem;color:black; ">
-        <h1 style="">Thank you</h1>
-        <p style="font-family:Lora;line-height: 1.4em;">This project was built by <a href="http://andersaberg.com">Anders Åberg</a> (<a href="http://twitter.com/andersaberg">@andersaberg</a>). If you like this or want me to add more airports, ping me on twitter - it will make me smile. <br/><br />It uses a bunch of open API's, all mentioned below.  Inspired by <a href=" http://youarelistening.to/">You are listening to</a>. Thank you <a href="http://www.liveatc.net/">Live ATC</a> for live feeds of flight radio and thank you <a href="http://tobiasahlin.com/typesource/">Typesource by Tobias Ahlin</a> for the font inspiration. The video background is from <a href="https://www.youtube.com/watch?v=YgmIibSnZs0">this youtube clip</a>. And the ambient music playing from soundcloud is linked above. Built with love and whipped cream by Anders.
-</div>
+            <h1 style="">Thank you</h1>
+            <p style="font-family:Lora;line-height: 1.4em;">This project was built by <a href="http://andersaberg.com">Anders Åberg</a> (<a href="http://twitter.com/andersaberg">@andersaberg</a>).
+                If you like this or want me to add more airports, ping me on twitter - it will make me smile. <br/><br />It
+                uses a bunch of open API's, all mentioned below. Inspired by <a href=" http://youarelistening.to/">You are listening to</a>.
+                Thank you <a href="http://www.liveatc.net/">Live ATC</a> for live feeds of flight radio and thank you
+                <a href="http://tobiasahlin.com/typesource/">Typesource by Tobias Ahlin</a> for the font inspiration. The
+                video background is from <a href="https://www.youtube.com/watch?v=YgmIibSnZs0">this youtube clip</a>. And
+                the ambient music playing from soundcloud is linked above. Built with love and whipped cream by Anders.
+        </div>
         <script>
             var stream=document.getElementById("stream");
             stream.volume=0.5;
@@ -158,6 +164,16 @@
 
     });
     </script>
+        <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-37656767-12', 'auto');
+  ga('send', 'pageview');
+
+</script>
         <style type="text/css">
             .current {
                 font-family: Lora, serif;
