--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
                 padding-top: 6em;
                 padding-bottom: 18em;
                 text-transform: uppercase;
+                text-shadow: 0 0 30px rgba(0,0,0,0.5);
             }
             
             .ybile-r1 {
