Changed text shadow and slogan

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <h1 class="ybile-r1">Listen</h1>
 
             <h1 class="ybile-r2">To the clouds</h1>
-            <h1 class="ybile-r3">live, as the world moves</h1>
+            <h1 class="ybile-r3">live, as the world flies</h1>
         </div>
 
         <h1>Airports</h1>
@@ -187,7 +187,7 @@
                 padding-top: 6em;
                 padding-bottom: 18em;
                 text-transform: uppercase;
-                text-shadow: 0 0 30px rgba(0,0,0,0.5);
+                text-shadow: 0 0 40px rgba(0,0,0,0.3)
             }
             
             .ybile-r1 {
