--- a/index.html
+++ b/index.html
@@ -68,6 +68,15 @@
             margin: 1rem auto;
             text-align: center;
         }
+
+        .mobilewarning {
+            display:none;
+        }
+        @media(max-with: 500px) {
+            .mobilewarning {
+                display:block;
+            }
+        }
         
         @media (min-aspect-ratio: 16/9) {
             .video-foreground {
@@ -128,6 +137,7 @@
                 <p>Your browser does not support the <code>audio</code> element.</p>
             </audio>
             <p class="current">Stockholm</p>
+            <p class="mobilewarning">(doesn't seem to work on a mobile device, sorry)</p>
         </div>
         <ul id="picker">
             <li data-code="esow">Stockholm</li>
