Live radio transmission

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
                 <p>Your browser does not support the <code>audio</code> element.</p>
             </audio>
             <p class="current">Stockholm</p>
+            <p>(This is a live radio transmission, if it's silent, then the airplanes are not very chatty at the moment)</p>
         </div>
         <ul id="picker">
             <li data-code="esow">Stockholm</li>
