Added Chicago and japan

--- a/index.html
+++ b/index.html
@@ -134,16 +134,18 @@
 
         <h1>Airports</h1>
         <div style="text-align:center">
-            <audio id="stream" src="http://mtl2.liveatc.net/esow" autoplay controls volume="0.4">
+            <audio id="stream" src="http://mtl2.liveatc.net/kord7" autoplay controls volume="0.4">
                 <p>Your browser does not support the <code>audio</code> element.</p>
             </audio>
-            <p class="current">Stockholm</p>
+            <p class="current">Chicago</p>
             <p>(This is a live radio transmission, if it's silent, then the airplanes are not very chatty at the moment)</p>
         </div>
         <ul id="picker">
+            <li data-code="kord7">Chicago</li>
             <li data-code="esow">Stockholm</li>
             <li data-code="esgg">Gothenburg</li>
             <li data-code="espa">Luleå</li>
+            <li data-code="rjtt_control">Japan</li>
             <li data-code="kjfk_twr">JFK Tower</li>
             <li data-code="ksfo_twr">San Fransisco Tower</li>
             <li data-code="klax6">Los Angeles, KLAX</li>
