--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@
             <p>(This is a live radio transmission, if it's silent, then the airplanes are not very chatty at the moment)</p>
         </div>
         <ul id="picker">
+            <li data-code="ktme">Houston</li>
+            <li data-code="kdfw_twr_hp">Dallas, Fort Worth</li>
             <li data-code="kord7">Chicago</li>
             <li data-code="esow">Stockholm</li>
             <li data-code="esgg">Gothenburg</li>
@@ -152,8 +154,9 @@
         </ul>
 
         <h1 style="margin-top:3rem;">Ambient music</h1>
+        <p style="text-align:center">Volume: <input id="vc_control" type="range" min="0" max="100" value="100"/></p>
         <div style="text-align:center;">
-            <iframe id="soundcloud_player_iframe" width="480" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/5281179&auto_play=true"></iframe>
+            <iframe id="soundcloud_player_iframe" width="480" height="300" scrolling="no" frameborder="no" src=""></iframe>
         </div>
 
         <div style="width:800px; margin:0 auto; background: rgba(255,255,255,.55); padding:20px;margin-top:5rem;color:black; ">
@@ -166,7 +169,27 @@
                 video background is from <a href="https://www.youtube.com/watch?v=YgmIibSnZs0">this youtube clip</a>. And
                 the ambient music playing from soundcloud is linked above. Built with love and whipped cream by Anders.
         </div>
+        <script src="https://w.soundcloud.com/player/api.js"></script>
         <script>
+function getRandomInt(min, max) {
+  min = Math.ceil(min);
+  max = Math.floor(max);
+  return Math.floor(Math.random() * (max - min)) + min;
+}
+
+$('#vc_control').on("change", function () {
+    var value = $(this).val() / 100;
+    var player         = SC.Widget("soundcloud_player_iframe");
+//var player = soundcloud.getPlayer('soundcloud_player_iframe');
+console.log(value);
+player.setVolume(value);
+});
+
+var scsrc = "https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/5281179&auto_play=true&start_track=" + getRandomInt(0,152);
+$("#soundcloud_player_iframe").attr("src", scsrc);
+
+
+
             var stream=document.getElementById("stream");
             stream.volume=0.5;
     $("#picker li").on("click", function () {
