--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         #vidtop-content {
             top: 0;
             color: #fff;
+            background: rgba(0, 0, 0, 0.18);
         }
         
         .vid-info {
@@ -293,6 +294,8 @@ $("#soundcloud_player_iframe").attr("src", scsrc);
             
             body {
                 font-family: Montserrat;
+                margin:0;
+                padding:0;
             }
         </style>
 </body>
