--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
 
             <h1 class="ybile-r2">To the clouds</h1>
             <h1 class="ybile-r3">live, as the world flies</h1>
+            <p>Perfect background noise while you work</p>
             <p class="mobilewarning">(doesn't seem to work on a mobile device, sorry)</p>
         </div>
 
@@ -225,6 +226,11 @@ $("#soundcloud_player_iframe").attr("src", scsrc);
                 padding-bottom: 18em;
                 text-transform: uppercase;
                 text-shadow: 0 0 40px rgba(0,0,0,0.3)
+            }
+
+            .ybile h1 {
+                    margin-bottom: 0;
+                    margin-top: 0;
             }
             
             .ybile-r1 {
