--- a/index.html
+++ b/index.html
@@ -142,8 +142,9 @@
             <p class="current">Chicago</p>
             <p>(This is a live radio transmission, if it's silent, then the airplanes are not very chatty at the moment)</p>
         </div>
-        <ul id="picker">
+        <ul id="picker">            
             <li data-code="ktme">Houston</li>
+            <li data-code="eham4">Amsterdam</li>
             <li data-code="kdfw_twr_hp">Dallas, Fort Worth</li>
             <li data-code="kord7">Chicago</li>
             <li data-code="esow">Stockholm</li>
