--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
         </div>
         <ul id="picker">            
             <li data-code="ktme">Houston</li>
+            <li data-code="eidw3">Dublin</li>
             <li data-code="eham4">Amsterdam</li>
             <li data-code="kdfw_twr_hp">Dallas, Fort Worth</li>
             <li data-code="kord7">Chicago</li>
