--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
         <ul id="picker">            
             <li data-code="ktme">Houston</li>
             <li data-code="eidw3">Dublin</li>
+            <li data-code="klga_twr">LaGuardia, NYC</li>
             <li data-code="eham4">Amsterdam</li>
             <li data-code="kdfw_twr_hp">Dallas, Fort Worth</li>
             <li data-code="kord7">Chicago</li>
@@ -152,7 +153,7 @@
             <li data-code="esgg">Gothenburg</li>
             <li data-code="espa">Luleå</li>
             <li data-code="rjtt_control">Japan</li>
-            <li data-code="kjfk_twr">JFK Tower</li>
+            <li data-code="kjfk_twr">JFK Tower, NYC</li>
             <li data-code="ksfo_twr">San Fransisco Tower</li>
             <li data-code="klax6">Los Angeles, KLAX</li>
         </ul>
