--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
             <p class="current">Chicago</p>
             <p>(This is a live radio transmission, if it's silent, then the airplanes are not very chatty at the moment)</p>
         </div>
-        <ul id="picker">            
+        <ul id="picker">
+              
             <li data-code="ktme">Houston</li>
             <li data-code="eidw3">Dublin</li>
             <li data-code="klga_twr">LaGuardia, NYC</li>
@@ -153,6 +154,7 @@
             <li data-code="esgg">Gothenburg</li>
             <li data-code="espa">Luleå</li>
             <li data-code="rjtt_control">Japan</li>
+            <li data-code="kmsp_twr">MSP, Minneapolis</li>
             <li data-code="kjfk_twr">JFK Tower, NYC</li>
             <li data-code="ksfo_twr">San Fransisco Tower</li>
             <li data-code="klax6">Los Angeles, KLAX</li>
