Added Paris, renamed Japan

--- a/index.html
+++ b/index.html
@@ -150,11 +150,12 @@
             <li data-code="klga_twr">LaGuardia, NYC</li>
             <li data-code="eham4">Amsterdam</li>
             <li data-code="kdfw_twr_hp">Dallas, Fort Worth</li>
+            <li data-code="lfpo_dep">Paris, ORY</li>            
             <li data-code="kord7">Chicago</li>
             <li data-code="esow">Stockholm</li>
             <li data-code="esgg">Gothenburg</li>
             <li data-code="espa">Luleå</li>
-            <li data-code="rjtt_control">Japan</li>
+            <li data-code="rjtt_control">Tokyo, HND</li>
             <li data-code="kmsp_twr">MSP, Minneapolis</li>
             <li data-code="kjfk_twr">JFK Tower, NYC</li>
             <li data-code="ksfo_twr">San Fransisco Tower</li>
