--- a/index.html
+++ b/index.html
@@ -159,10 +159,11 @@
             <li><a href="https://twitter.com/home?status=%40andersaberg%20Hey,%20I%20would%20like%20you%20to%20add%20*your%20missing%20airport*">Missing your airport?</a></li>
         </ul>
         <div style="text-align:center">
+            <p>Live: <span class="current">Chicago</span></p>
             <audio id="stream" src="http://mtl2.liveatc.net/kord7" autoplay controls volume="0.4">
                 <p>Your browser does not support the <code>audio</code> element.</p>
             </audio>
-            <p class="current">Chicago</p>
+            
             <p>(This is a live radio transmission, if it's silent, then the airplanes are not very chatty at the moment)</p>
         </div>
 
