--- a/index.html
+++ b/index.html
@@ -262,11 +262,11 @@ window.setInterval(function(){
         <style type="text/css">
             #vcontrols {
                 position: fixed;
-                top: 0;
+                bottom: 0;
                 right: 0;
                 padding: 20px;
                 background: rgba(0, 0, 0, .3);
-                border-bottom-left-radius: 10px;
+                border-top-left-radius: 10px;
                 min-width: 280px;
             }
 
