Switched colume contorls

--- a/index.html
+++ b/index.html
@@ -265,9 +265,10 @@ window.setInterval(function(){
                 bottom: 0;
                 right: 0;
                 padding: 20px;
-                background: rgba(0, 0, 0, .3);
+                background:white;
                 border-top-left-radius: 10px;
                 min-width: 280px;
+                color:#eee;
             }
 
             #vcontrols div:first-child {
