changed font color

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ window.setInterval(function(){
                 background:white;
                 border-top-left-radius: 10px;
                 min-width: 280px;
-                color:#eee;
+                color:#333;
             }
 
             #vcontrols div:first-child {
