--- a/index.html
+++ b/index.html
@@ -153,12 +153,14 @@
             <li data-code="lfpo_dep">Paris, ORY</li>
             <li data-code="kord7">Chicago</li>
             <li data-code="esow">Stockholm</li>
+            <li data-code="engm2_app">Oslo, OSL</li>
             <li data-code="esgg">Gothenburg</li>
             <li data-code="espa">Luleå</li>
             <li data-code="cyul_twr2">Montreal, YUL</li>
             <li data-code="omdb_twr">Dubai, DXB</li>            
             <li data-code="rjtt_control">Tokyo, HND</li>
-            <li data-code="kmsp_twr">MSP, Minneapolis</li>
+            <li data-code="kmsp_twr">Minneapolis, MSP</li>
+            <li data-code="kphx_app_s">Phoenix, PHX</li>            
             <li data-code="kjfk_twr">JFK Tower, NYC</li>
             <li data-code="ksfo_twr">San Fransisco Tower</li>
             <li data-code="klax6">Los Angeles, KLAX</li>
