--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
             <li data-code="omdb_twr">Dubai, DXB</li>            
             <li data-code="rjtt_control">Tokyo, HND</li>
             <li data-code="kmsp_twr">Minneapolis, MSP</li>
+            <li data-code="kcle1_2">Cleveland-Hopkins, CLE</li>
             <li data-code="kphx_app_s">Phoenix, PHX</li>            
             <li data-code="kjfk_twr">JFK Tower, NYC</li>
             <li data-code="ksfo_twr">San Fransisco Tower</li>
