--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <li data-code="kdtw2">Detroit, DTW</li>
             <li data-code="ksea_twr">Seattle, SEA</li>            
             
-            <li><a href="https://twitter.com/home?status=Hey%20%40andersaberg,%20I%20would%20like%20you%20to%20add%20*your%20missing%20airport*">Missing your airport?</a></li>
+            <li><a href="https://twitter.com/home?status=Hey%20%40andersaberg,%20I%20would%20like%20you%20to%20add%20*your%20missing%20airport*%20%23listentotheclouds">Missing your airport?</a></li>
         </ul>
         <div style="text-align:center">
             <p>Live: <span class="current">Chicago</span></p>
