--- a/index.html
+++ b/index.html
@@ -174,9 +174,11 @@
             <li data-code="kmso">Missoula, KMSO</li>
             <li data-code="kdtw2">Detroit, DTW</li>
             <li data-code="ksea_twr">Seattle, SEA</li>
-            <li data-code="lszh_twr">Zurich, ZRH</li>                     
+            <li data-code="lszh_twr">Zurich, ZRH</li>
             <li data-code="lfsb2">Basel, BSL</li>
+            <li data-code="uuee2">Moscow, SVO</li>
             
+
             <li><a href="https://twitter.com/home?status=Hey%20%40andersaberg,%20I%20would%20like%20you%20to%20add%20*your%20missing%20airport*%20%23listentotheclouds">Missing your airport?</a></li>
         </ul>
         <div style="text-align:center">
