--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
             <li data-code="lfsb2">Basel, BSL</li>
             <li data-code="uuee2">Moscow, SVO</li>
             <li data-code="kbos_twr">Boston-Logan, BOS</li>
+            <li data-code="epwa2">Warsaw, WAW</li>
             
             
 
