--- a/index.html
+++ b/index.html
@@ -179,6 +179,8 @@
             <li data-code="uuee2">Moscow, SVO</li>
             <li data-code="kbos_twr">Boston-Logan, BOS</li>
             <li data-code="epwa2">Warsaw, WAW</li>
+            <li data-code="epmo">Warsaw, WMI</li>
+            
             <li data-code="cyow3">Ottawa, YOW</li>
             <li data-code="cyul_twr2">Quebec, YUL</li>
             <li data-code="cyyz7">Toronto, YYZ</li>
