--- a/index.html
+++ b/index.html
@@ -191,7 +191,6 @@
             <li data-code="kbos_twr">Boston-Logan, BOS</li>
             <li data-code="epwa2">Warsaw, WAW</li>
             <li data-code="epmo">Warsaw, WMI</li>
-
             <li data-code="cyow3">Ottawa, YOW</li>
             <li data-code="cyul_twr2">Quebec, YUL</li>
             <li data-code="cyyz7">Toronto, YYZ</li>
@@ -199,7 +198,7 @@
             <li data-code="ekch_twr">Copenhagen, CPH</li>
             <li data-code="kphl_final">Philadelphia, PHL</li>
             <li data-code="krdu_app2">Durham, RDU</li>
-
+            <li data-code="kbuf_app">Buffalo, BUF</li>
 
 
 
