--- a/index.html
+++ b/index.html
@@ -199,6 +199,8 @@
             <li data-code="kphl_final">Philadelphia, PHL</li>
             <li data-code="krdu_app2">Durham, RDU</li>
             <li data-code="kbuf_app">Buffalo, BUF</li>
+            <li data-code="kclt2">Charlotte, CLT</li>
+            
 
 
 
