--- a/index.html
+++ b/index.html
@@ -149,6 +149,24 @@
             <p>Perfect background noise while you work</p>
             <p class="mobilewarning">(doesn't seem to work on a mobile device, sorry)</p>
         </div>
+        <!-- Load Facebook SDK for JavaScript -->
+	<div id="fb-root"></div>
+	<script>(function(d, s, id) {
+	  var js, fjs = d.getElementsByTagName(s)[0];
+	  if (d.getElementById(id)) return;
+	  js = d.createElement(s); js.id = id;
+	  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1";
+	  fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));</script>
+
+	<!-- Your share button code -->
+    <p style="text-align:center">
+	<div class="fb-share-button" 
+		data-href="http://listentothe.cloud/" 
+		data-layout="button_count">
+	</div>
+    </p>
+
 
         <h1>Airports</h1>
         <ul id="picker">
