--- a/index.html
+++ b/index.html
@@ -121,6 +121,15 @@
     </div>
 
     <div id="vidtop-content">
+       <!-- Load Facebook SDK for JavaScript -->
+	<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.8&appId=1284548061596480";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 
         <div id="vcontrols">
             <div class="playpause">
@@ -148,25 +157,14 @@
             <h1 class="ybile-r3">live, as the world flies</h1>
             <p>Perfect background noise while you work</p>
             <p class="mobilewarning">(doesn't seem to work on a mobile device, sorry)</p>
-        </div>
-        <!-- Load Facebook SDK for JavaScript -->
-	<div id="fb-root"></div>
-	<script>(function(d, s, id) {
-	  var js, fjs = d.getElementsByTagName(s)[0];
-	  if (d.getElementById(id)) return;
-	  js = d.createElement(s); js.id = id;
-	  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1";
-	  fjs.parentNode.insertBefore(js, fjs);
-	}(document, 'script', 'facebook-jssdk'));</script>
-
+            
 	<!-- Your share button code -->
-    <p style="text-align:center">
-	<div class="fb-share-button" 
-		data-href="http://listentothe.cloud/" 
-		data-layout="button_count">
-	</div>
-    </p>
+    <div style="text-align:center">
+	<div class="fb-share-button" data-href="http://listentothe.cloud/" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Flistentothe.cloud%2F&amp;src=sdkpreparse">Share</a></div>
+    </div>
 
+        </div>
+ 
 
         <h1>Airports</h1>
         <ul id="picker">
