--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <title>Listen to the clouds</title>
-    <meta property="og:image" content="share3.png" />
+    <meta property="og:image" content="http://listentothe.cloud/share4.jpg" />
+    <meta property="og:type"          content="website" />
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc="
         crossorigin="anonymous"></script>
     <!-- Include in <head> to load fonts from Google -->
