--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Listen to the clouds</title>
+    <title>Listen To The Clouds</title>
     <meta property="og:image" content="http://listentothe.cloud/share4.jpg" />
     <meta property="og:type"          content="website" />
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc="
