--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
             <h1 class="ybile-r2">To the clouds</h1>
             <h1 class="ybile-r3">live, as the world flies</h1>
-            <p>Perfect background noise while you work</p>
+            <p>Perfect background noise while you work or relax</p>
             <p class="mobilewarning">(doesn't seem to work on a mobile device, sorry)</p>
             
 	<!-- Your share button code -->
