--- a/index.html
+++ b/index.html
@@ -256,6 +256,8 @@
             <li data-code="krdu_app2">Durham, RDU</li>
             <li data-code="kbuf_app">Buffalo, BUF</li>
             <li data-code="kclt2">Charlotte, CLT</li>
+            <li data-code="kpit2">Pittsburgh, PIT</li>
+            
             
 
 
