--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@ var playButton = {
 };
 
 playButton.init();
-var isMobile = window.matchMedia("only screen and (max-width: 760px)");
+var isMobile = window.matchMedia("only screen and (max-width: 760px)").matches;
 if(isMobile) {
    changestate(); 
 }
