--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
             <li data-code="kbuf_app">Buffalo, BUF</li>
             <li data-code="kclt2">Charlotte, CLT</li>
             <li data-code="kpit2">Pittsburgh, PIT</li>
+            <li data-code="kslc_app">Salt Lake City, SLC</li>
             
             
 
