--- a/index.html
+++ b/index.html
@@ -545,6 +545,7 @@ window.setInterval(function(){
                 text-align: center;
                 cursor: pointer;
                 transition: all 0.2s ease;
+                padding:10px;
             }
             
             #picker li.active {
