display block on mobile, works ish

--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@
             .video-foreground {
                 display: none;
             }
+
+            .spacemode .video-foreground {
+                display:block;
+            }
         }
         
         @media (min-aspect-ratio: 16/9) {
