--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ window.setInterval(function(){
             <h1 class="ybile-r3">live, as the world flies</h1>
             <p>Perfect background noise while you work or relax</p>
             <p class="mobilewarning">(Works better if you are not on a mobile device... sorry)</p>
-
+            <p>(Question: Do you want me to add a "sleep mode" button? <a href="https://docs.google.com/forms/d/e/1FAIpQLSdP99Nt0q8cxDThYm-vWe9NAC0R6S_oYntoVTCq9mZK-SAjqQ/viewform">Answer here</a>)</p>
             <!-- Your share button code -->
             <div style="text-align:center">
                 <div class="fb-share-button" data-href="http://listentothe.cloud/" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Flistentothe.cloud%2F&amp;src=sdkpreparse">Share</a></div>
@@ -477,6 +477,10 @@ function spaceModeOff() {
                 font-family: Lora, serif;
             }
             
+            a, a:visited {
+                color: #fffdd2;
+            }
+
             .ybile {
                 color: #fffdd2;
                 font-family: Montserrat, sans-serif;
