--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ window.setInterval(function(){
             <iframe id="soundcloud_player_iframe" width="480" height="300" scrolling="no" frameborder="no" src=""></iframe>
         </div>
 
-        <div style="max-width:800px; margin:0 auto; background: rgba(255,255,255,.55); padding:20px;margin-top:5rem;color:black; ">
+        <div class="thankyou">
             <h1 style="">Thank you</h1>
             <p style="text-align:center"><script id='fbx9hgl'>(function(i){var f,s=document.getElementById(i);f=document.createElement('iframe');f.src='//button.flattr.com/view/?fid=el6vxk&button=compact&url='+encodeURIComponent(document.URL);f.title='Flattr';f.height=20;f.width=110;f.style.borderWidth=0;s.parentNode.insertBefore(f,s);})('fbx9hgl');</script></p>
             <p style="font-family:Lora;line-height: 1.4em;">This project was built by <a href="http://andersaberg.com">Anders Åberg</a> (<a href="http://twitter.com/andersaberg">@andersaberg</a>).
@@ -418,6 +418,13 @@ function spaceModeOff() {
 
 </script>
         <style type="text/css">
+        .thankyou {
+            max-width:800px; margin:0 auto; background: rgba(255,255,255,.55); padding:20px;margin-top:5rem;color:black;
+        }
+
+        .thankyou a, .thankyou a:visited {
+            color:black;
+        }
             #vcontrols {
                 position: fixed;
                 bottom: 0;
