Added AUS & SNN

--- a/index.html
+++ b/index.html
@@ -331,6 +331,8 @@ background: #365899;
             <li data-code="kmci1_local">Kansas City, MCI</li>
             <li data-code="kric1">Richmond, RIC</li>
             <li data-code="kmvy">Vineyard Haven, MVY</li>
+            <li data-code="einn2">Shannon, SNN</li>
+            <li data-code="kaus2">Austin, KAUS</li>
 
 
 
