--- a/index.html
+++ b/index.html
@@ -336,6 +336,8 @@ window.setInterval(function(){
 			<li data-code="kmvy">Vineyard Haven, MVY</li>
 			<li data-code="einn2">Shannon, SNN</li>
 			<li data-code="kaus2">Austin, KAUS</li>
+			<li data-code="enbo_twr">Bodo Norway, ENBO</li>
+			
 
 
 
