Added Hong Kong

--- a/index.html
+++ b/index.html
@@ -337,6 +337,8 @@ window.setInterval(function(){
 			<li data-code="einn2">Shannon, SNN</li>
 			<li data-code="kaus2">Austin, KAUS</li>
 			<li data-code="enbo_twr">Bodo Norway, ENBO</li>
+			<li data-code="vhhh_app_1191_2">Hong Kong, HKG</li>
+			
 			
 
 
