Added San Diego Tower

--- a/index.html
+++ b/index.html
@@ -338,6 +338,8 @@ window.setInterval(function(){
 			<li data-code="kaus2">Austin, KAUS</li>
 			<li data-code="enbo_twr">Bodo Norway, ENBO</li>
 			<li data-code="vhhh_app_1191_2">Hong Kong, HKG</li>
+			<li data-code="ksan2">San Diego, SAN</li>
+			
 			
 			
 
