--- a/index.html
+++ b/index.html
@@ -339,6 +339,7 @@ window.setInterval(function(){
 			<li data-code="enbo_twr">Bodo Norway, ENBO</li>
 			<li data-code="vhhh_app_1191_2">Hong Kong, HKG</li>
 			<li data-code="ksan2">San Diego, SAN</li>
+			<li data-code="kmia_twr">Miami, KMIA</li>
 			
 			
 			
