--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		}
 		
 		.video-background {
-			background: #000;
+			background: #fff;
 			position: fixed;
 			top: 0;
 			right: 0;
@@ -39,10 +39,13 @@
 		
 		#vidtop-content {
 			top: 0;
-			color: #fffbbd;
-			background: rgba(0, 0, 0, 0.25);
+			color: #fff;
+			background: rgba(30, 70, 200, 0.5);
 		}
 		
+		
+
+
 		.spacemode #vidtop-content {
 			background: rgba(0, 0, 0, 0.55);
 		}
@@ -108,7 +111,7 @@
 				padding-bottom: 100px;
 			}
 			.video-background {
-				background: url("mbg.jpg") black;
+				background: url("mbg.jpg") white;
 			}
 			.video-foreground {
 				display: none;
@@ -184,6 +187,14 @@ window.setInterval(function(){
 		</div>
 	</div>
 
+
+<div id="live"><span class="dot"></span>Live: &nbsp <span class="current"> Chicago</span></div>
+
+
+<div id="noise">Background noise while you work or relax</p>
+			<p class="mobilewarning">(Works better if you are not on a mobile device... sorry) </div>
+
+
 	<div id="vidtop-content">
 		<!-- Load Facebook SDK for JavaScript -->
 		<div id="fb-root"></div>
@@ -210,31 +221,28 @@ window.setInterval(function(){
 			</div>
 			<button class="button nxt">&#10097;&#10097;</button>
 			<div class="clearfix"><span>
-            Airport chatter: </span><input id="vc_radio" type="range" min=0 max=100 value="50" />
-			</div>
+            Airport chatter: </span><input id="vc_radio" type="range" min=0 max=100 value="50" /></div>
 			<div class="clearfix"><span>Ambient music:</span> <input id="vc_music" type="range" min=0 max=100 value="50" />
 			</div>
 		</div>
 
 		<div class="ybile">
-			<h1 class="ybile-r1">Listen</h1>
 
-			<h1 class="ybile-r2">To the clouds</h1>
+			<h1 class="ybile-r2">Listen to the clouds</h1>
 			<h1 class="ybile-r3">live, as the world flies</h1>
-			<p>Perfect background noise while you work or relax</p>
-			<p class="mobilewarning">(Works better if you are not on a mobile device... sorry)</p>
-			<!-- Your share button code -->
-			<div style="text-align:center">
-				<div class="fb-share-button" data-href="http://listentothe.cloud/" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Flistentothe.cloud%2F&amp;src=sdkpreparse">Share</a></div>
-			</div>
 
-			<div style="text-align:center" class="donate">
-				<p>Would you donate to support this?</p>
-				<div id="supportbtns"><button id="yesbtn">Yes</button><button id="nobtn">No</button></div>
-				<div id="support">
-					<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=QESTW8XN5RYTL" target="_blank" class="btn">Thank you - Click here to donate any amount you want</a>
-				</div>
-			</div>
+<!---			<div style="text-align:center">
+						<p>Live: <span class="current">Chicago</span></p>
+					</div>
+
+!---->
+
+		</br></br>
+			<!-- Your share button code -->
+
+
+			</br></br>
+
 			<style>
 				.donate button,
 				.btn {
@@ -267,15 +275,11 @@ window.setInterval(function(){
                     $(this).text("Okey :(");
                 });
             </script>
-		</div>
 
 
-
-
+</br>
 		<h1>Airports</h1>
-		<div style="text-align:center" class="mobile-only">
-			<p>Live: <span class="current">Chicago</span></p>
-		</div>
+		
 		<ul id="picker">
 			<li data-code="iss">ISS Space station (beta)</li>
 			<li data-code="ktme">Houston</li>
@@ -351,22 +355,22 @@ window.setInterval(function(){
 
 
 
-
-
-
-
-
 			<li><a target="_blank" href="https://twitter.com/home?status=Hey%20%40andersaberg,%20I%20would%20like%20you%20to%20add%20*your%20missing%20airport*%20%23listentotheclouds">Missing your airport?</a></li>
 		</ul>
-		<div style="text-align:center">
-			<p>(Question: Do you want me to add a "sleep mode" button? <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdP99Nt0q8cxDThYm-vWe9NAC0R6S_oYntoVTCq9mZK-SAjqQ/viewform">Answer here</a>)</p>
-			<p>Live: <span class="current">Chicago</span></p>
+		
+
+
+	<!---		<p>Live: <span class="current">Chicago</span></p>
 			<audio id="stream" src="http://mtl2.liveatc.net/kord7" autoplay controls volume="0.4">
 				<p>Your browser does not support the <code>audio</code> element.</p>
 			</audio>
-
+!---->
 			<p>(This is a live radio transmission, if it's silent, then the airplanes are not very chatty at the moment)</p>
-		</div>
+
+					<div style="text-align:center">
+				<div class="fb-share-button" data-href="http://listentothe.cloud/" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Flistentothe.cloud%2F&amp;src=sdkpreparse">Share</a></div>
+			</div>
+
 
 		<h1 style="margin-top:3rem;">Ambient music</h1>
 		<p style="text-align:center">Volume: <input id="vc_control" type="range" min="0" max="100" value="100" /></p>
@@ -374,10 +378,24 @@ window.setInterval(function(){
 			<iframe id="soundcloud_player_iframe" width="480" height="300" scrolling="no" frameborder="no" src=""></iframe>
 		</div>
 
+<div style="text-align:center" class="donate">
+				<p>Would you donate to support this?</p>
+				<div id="supportbtns"><button id="yesbtn">Yes</button><button id="nobtn">No</button></div>
+				<div id="support">
+					<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=QESTW8XN5RYTL" target="_blank" class="btn">Thank you - Click here to donate any amount you want</a>
+				</div>
+			</div>
+
+
+<div style="text-align:center">
+			<p>(Question: Do you want me to add a "sleep mode" button? <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdP99Nt0q8cxDThYm-vWe9NAC0R6S_oYntoVTCq9mZK-SAjqQ/viewform">Answer here</a>)</p>
+</br>
+
+
 		<div class="thankyou">
 			<h1 style="">Thank you</h1>
 			<p style="text-align:center"><script id='fbx9hgl'>(function(i){var f,s=document.getElementById(i);f=document.createElement('iframe');f.src='//button.flattr.com/view/?fid=el6vxk&button=compact&url='+encodeURIComponent(document.URL);f.title='Flattr';f.height=20;f.width=110;f.style.borderWidth=0;s.parentNode.insertBefore(f,s);})('fbx9hgl');</script></p>
-			<p style="font-family:Lora;line-height: 1.4em;">This project was built by <a href="http://andersaberg.com">Anders Åberg</a> (<a href="http://twitter.com/andersaberg">@andersaberg</a>).
+			<p style="font-family:circular;line-height: 1.4em; text-transform:none">This project was built by <a href="http://andersaberg.com">Anders Åberg</a> (<a href="http://twitter.com/andersaberg">@andersaberg</a>).
 				If you like this or want me to add more airports, ping me on twitter - it will make me smile. <br/><br />It uses a bunch
 				of open API's, all mentioned below. Inspired by <a href=" http://youarelistening.to/">You are listening to</a>. Thank
 				you <a href="http://www.liveatc.net/">Live ATC</a> for live feeds of flight radio and thank you
@@ -385,6 +403,10 @@ window.setInterval(function(){
 				is from <a href="https://www.youtube.com/watch?v=YgmIibSnZs0">this youtube clip</a>. And the ambient music playing from
 				soundcloud is linked above. Built with love and whipped cream by Anders.
 		</div>
+
+
+
+
 		<script src="https://w.soundcloud.com/player/api.js"></script>
 		<script>
 
@@ -495,19 +517,60 @@ document.addEventListener("visibilitychange", handleVisibilityChange, false);
 </script>
 		<style type="text/css">
 			.thankyou {
-				max-width: 800px;
+				max-width: 600px;
 				margin: 0 auto;
-				background: rgba(255, 255, 255, .55);
 				padding: 20px;
 				margin-top: 5rem;
-				color: black;
+				color: white;
+				font-family: circular;
+				font-weight: 100;
 			}
 			
 			.thankyou a,
 			.thankyou a:visited {
-				color: black;
+				color: white;
 			}
 			
+			#live {
+				display: flex;
+				align-items: center;
+				position: fixed;
+				top: 20px;
+				left: 20px;
+				font-size: 15px;
+				letter-spacing:2px;
+				font-weight:700;
+				text-transform: uppercase;
+				color: #fff;
+			}
+
+			#noise {
+				display: flex;
+				position: absolute;
+				top: 20px;
+				right: 20px;
+				font-size: 13px;
+				letter-spacing:2px;
+				font-weight:100;
+				text-transform: uppercase;
+				color: #fff;
+			}
+
+			#live .dot {
+				animation: pulse 2s infinite alternate-reverse;
+				width: 10px;
+				height: 10px;
+				border-radius: 5px;
+				background: red;
+				margin-right: 10px;
+		}
+
+			@-webkit-keyframes pulsate {
+			    0% {-webkit-transform: scale(0.1, 0.1); opacity: 0.0;}
+			    50% {opacity: 1.0;}
+			    100% {-webkit-transform: scale(1.2, 1.2); opacity: 0.0;}
+			}
+
 			#vcontrols {
 				position: fixed;
 				bottom: 0;
@@ -585,20 +648,31 @@ document.addEventListener("visibilitychange", handleVisibilityChange, false);
 			}
 			
 			.current {
-				font-family: Lora, serif;
 			}
 			
 			a,
 			a:visited {
-				color: #fffdd2;
+				color: #fff;
+				
+			}
+
+
+			a.fb-xfbml-parse-ignore {
+				color: #fff;
+				background-color: rgb(3, 49, 163);
+				padding: 15px;
+				border-radius: 5px;
+				text-decoration:none;
+				letter-spacing:1px;
 			}
 			
 			.ybile {
-				color: #fffdd2;
-				font-family: Montserrat, sans-serif;
+				color: #fff;
+				font-family: tw cen MT, butler, circular, sans-serif;
 				text-align: center;
-				line-height: 3em;
+				line-height: 1.5em;
 				padding-top: 6em;
+				font-weight:700;
 				padding-bottom: 10em;
 				text-transform: uppercase;
 				text-shadow: 0 0 40px rgba(0, 0, 0, 0.3)
@@ -621,15 +695,21 @@ document.addEventListener("visibilitychange", handleVisibilityChange, false);
 			}
 			
 			.ybile-r2 {
-				font-weight: 200;
-				font-size: 7.8em;
-				line-height: 1em;
+				font-size: 4.0em;
+				line-height: 1.2em;
+				letter-spacing:7px;
+				max-width:450px;
+				margin-left:auto;
+				margin-right:auto;
 			}
 			
 			.ybile-r3 {
-				font-weight: 200;
-				font-size: 4.8em;
-				line-height: 1.1em;
+				font-weight: 100;
+				font-size: 1.1em;
+				line-height: 2.5em;
+				letter-spacing: 7px;
+				text-transform:uppercase;
+				font-family:"circular";
 			}
 			
 			.ybile-r1:before,
@@ -655,11 +735,17 @@ document.addEventListener("visibilitychange", handleVisibilityChange, false);
 				margin-top: 3rem;
 				flex-wrap: wrap;
 				padding: 0;
+				font-weight: 100;
+				font-size: 0.8em;
+				line-height: 1.5em;
+				letter-spacing: 1.5px;
+				text-transform:uppercase;
+				font-family:"circular";
 			}
 			
 			ul#picker li {
 				width: 140px;
-				background: rgba(0, 0, 0, .5);
+				background: rgba(0, 20, 50, .5);
 				border-radius: 100px;
 				height: 140px;
 				display: flex;
@@ -679,7 +765,7 @@ document.addEventListener("visibilitychange", handleVisibilityChange, false);
 			
 			#picker li a,
 			#picker li a:visited {
-				color: #fffbbd;
+				color: #fff;
 			}
 			
 			#picker li:hover {
@@ -692,7 +778,7 @@ document.addEventListener("visibilitychange", handleVisibilityChange, false);
 			}
 			
 			body {
-				font-family: Montserrat;
+				font-family: circular;
 				margin: 0;
 				padding: 0;
 			}
@@ -811,6 +897,8 @@ function changestate() {
         player.pause();
     }
 }
+
+
 </script>
 </body>
 
