--- a/index.html
+++ b/index.html
@@ -150,6 +150,19 @@
 				display: none;
 			}
 		}
+
+@font-face { 
+	font-family: "circular"; 
+	src:url("lineto-circular-book.ttf") format("ttf"),
+	} 
+
+@font-face { 
+	font-family: "TW Cen MT"; 
+	font-weight: bold; 
+	src:url("TW CEN MT Bold.ttf") format("ttf"), 
+	}
+
+
 	</style>
 	<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
