--- a/index.html
+++ b/index.html
@@ -154,12 +154,14 @@
 @font-face { 
 	font-family: "circular"; 
 	src:url("lineto-circular-book.ttf") format("ttf"),
+		url("lineto-circular-book.woff") format("woff")
 	} 
 
 @font-face { 
 	font-family: "TW Cen MT"; 
 	font-weight: bold; 
-	src:url("TW CEN MT Bold.ttf") format("ttf"), 
+	src:url("TW CEN MT Bold.ttf") format("ttf")
+		url("TW CEN MT Bold.woff") format("woff"), 
 	}
 
 
