Change font names

--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
 @font-face { 
 	font-family: "TW Cen MT"; 
 	font-weight: bold; 
-	src:url("TW CEN MT Bold.ttf") format("ttf")
-		url("TW CEN MT Bold.woff") format("woff"), 
+	src:url("TW-Cen-MT-Bold.ttf") format("ttf")
+		url("TW-Cen-MT-Bold.woff") format("woff"), 
 	}
 
 
