fix TW Cen MT font

--- a/index.html
+++ b/index.html
@@ -27,6 +27,21 @@
 			z-index: -99;
 		}
 		
+
+		@font-face { 
+			font-family: "circular"; 
+			src:url("lineto-circular-book.ttf") format("ttf"),
+				url("lineto-circular-book.woff") format("woff")
+			} 
+
+		@font-face { 
+			font-family: "TW Cen MT"; 
+			font-weight: bold; 
+			src:url("TW-Cen-MT-Bold.ttf") format("ttf"),
+				url("TW-Cen-MT-Bold.woff") format("woff") 
+			}
+
+
 		.video-foreground,
 		.video-background iframe {
 			position: absolute;
@@ -44,6 +59,7 @@
 		}
 		
 		
+
 
 
 		.spacemode #vidtop-content {
@@ -143,26 +159,16 @@
 			.vid-info h1 {
 				margin-bottom: .2rem;
 			}
+
 		}
 		
 		@media all and (max-width: 500px) {
 			.vid-info .acronym {
 				display: none;
 			}
+
 		}
 
-@font-face { 
-	font-family: "circular"; 
-	src:url("lineto-circular-book.ttf") format("ttf"),
-		url("lineto-circular-book.woff") format("woff")
-	} 
-
-@font-face { 
-	font-family: "TW Cen MT"; 
-	font-weight: bold; 
-	src:url("TW-Cen-MT-Bold.ttf") format("ttf")
-		url("TW-Cen-MT-Bold.woff") format("woff"), 
-	}
 
 
 	</style>
