--- a/index.html
+++ b/index.html
@@ -722,6 +722,7 @@ document.addEventListener("visibilitychange", handleVisibilityChange, false);
 			.ybile-r2 {
 				font-size: 4.0em;
 				line-height: 1.2em;
+				font-weight:bold;
 				letter-spacing:7px;
 				max-width:450px;
 				margin-left:auto;
