Brought back audio stream

--- a/index.html
+++ b/index.html
@@ -386,11 +386,11 @@ window.setInterval(function(){
 		
 
 
-	<!---		<p>Live: <span class="current">Chicago</span></p>
-			<audio id="stream" src="http://mtl2.liveatc.net/kord7" autoplay controls volume="0.4">
+	<!---		<p>Live: <span class="current">Chicago</span></p> -->
+			<audio id="stream" src="http://mtl2.liveatc.net/kord7" autoplay controls volume="0.4" style="visibility: hidden">
 				<p>Your browser does not support the <code>audio</code> element.</p>
 			</audio>
-!---->
+
 			<p>(This is a live radio transmission, if it's silent, then the airplanes are not very chatty at the moment)</p>
 
 
