fix thank you header

--- a/index.html
+++ b/index.html
@@ -550,6 +550,7 @@ document.addEventListener("visibilitychange", handleVisibilityChange, false);
 				font-family: circular;
 				font-weight: 100;
 			}
+
 			
 			.thankyou a,
 			.thankyou a:visited {
@@ -811,6 +812,9 @@ document.addEventListener("visibilitychange", handleVisibilityChange, false);
 			
 			h1 {
 				text-align: center;
+				letter-spacing:2px;
+				font-family:tw cen mt;
+				font-weight:bold;
 			}
 			
 			body {
