--- a/index.html
+++ b/index.html
@@ -578,6 +578,7 @@ document.addEventListener("visibilitychange", handleVisibilityChange, false);
 				font-weight:700;
 				text-transform: uppercase;
 				color: #fff;
+				z-index: 101;
 			}
 			.isMobile #live {
 				    justify-content: center;
@@ -586,6 +587,7 @@ document.addEventListener("visibilitychange", handleVisibilityChange, false);
 					top: 0;
 					padding: 20px 0;
 					background: linear-gradient( to bottom, rgba(16, 51, 130, 0.75) 80%, rgba(255, 0, 0, 0));
+					
 			}
 
 			.isMobile #noise {
