Lowercase thank you text + color of background

--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@ window.setInterval(function(){
 
 
 
+</br></br>
 
 <div style="text-align:center">
 			<p>(Question: Do you want me to add a "sleep mode" button? <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdP99Nt0q8cxDThYm-vWe9NAC0R6S_oYntoVTCq9mZK-SAjqQ/viewform">Answer here</a>)</p>
@@ -232,7 +233,7 @@ window.setInterval(function(){
 
 
 		<div class="thankyou">
-			<h1 style="">Thank you</h1>
+			<h1 style="thankyou">Thank you</h1>
 			
 			<p style="text-align:center"><script id='fbx9hgl'>(function(i){var f,s=document.getElementById(i);f=document.createElement('iframe');f.src='//button.flattr.com/view/?fid=el6vxk&button=compact&url='+encodeURIComponent(document.URL);f.title='Flattr';f.height=20;f.width=110;f.style.borderWidth=0;s.parentNode.insertBefore(f,s);})('fbx9hgl');</script></p>
 
@@ -253,7 +254,6 @@ window.setInterval(function(){
 				<div id="support">
 					<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=QESTW8XN5RYTL" target="_blank" class="btn">Thank you - Click here to donate any amount you want</a>
 				</div>
-			</div>
 
 
 
